--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffffff;
+  text-align: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+ .hd{ 
+  color:rgb(247,247,247);
+  text-align: center;
+  text-shadow: 3px 4px 9px rgb(25, 9, 177);
+  font-size:32px;
+  background: rgb(179, 231, 255);
+  padding: 10px;
+  border-radius: 30px;
+  font-family: 'Inconsolata', monospace;
+} 
+.cards{
+  display: inline-block;
+}
+.cards{
+  margin: 30px;
+  border-radius: 20px;
+  transition: transform .4s;
+  font-family: 'Baloo Bhaina 2', cursive;
+}
+.cards:hover{
+  cursor:pointer;
+  transform: scale(1.2);
+  box-shadow: -10px 14px 5px rgb(180, 180, 180);
+}
+
+.cardsImg{
+  width: 200px;
+  height: 280px;
+  border-radius: 20px;
+}
+.cardCategory{
+  color:rgb(80, 80, 80);
+  text-align: center;
+}
+.cardInfo{
+  text-align: center;
+}
+.btn{
+  border-radius: 20px;
+  cursor: pointer;
+  padding: 8px;
+}
+ul{
+  display: flex;
+}
+li {
+    list-style: none;
+    padding: 6px 9px;
+    margin: 2px;
+}
+a{
+  text-decoration: none;
+}
+
+.footr{
+  background-color: rgb(212, 207, 200);
+  margin-bottom: 0px;
+  color:rgb(23, 35, 58);
+}
+
